# cl_course

./: .gitignore  CMakeLists.txt  README.md
Parser/: CMakeLists.txt  Parser.cpp  Parser.h
Task_1/: .gitignore  CMakeLists.txt  Parser.cpp  README.md  Word.h  main.cpp
Task_2/: CMakeLists.txt  README.md  main.cpp
Task_3/: CMakeLists.txt  README.md  main.cpp
Task_4/: CMakeLists.txt  Model.h  README.md  main.cpp  model.json
Task_5/: CMakeLists.txt  README.md  Requests.h  Term.h  Thesaurus.h  main.cpp
